Imported xamarin logo into wpf project

--- a/sources/Applications/Cross-Platform/Windows/WPF/Apps.Cross.WPF.csproj
+++ b/sources/Applications/Cross-Platform/Windows/WPF/Apps.Cross.WPF.csproj
@@ -117,5 +117,8 @@
       <Name>Apps.Cross.SharedUI</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="xamarin_logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
