Updated all launch settings for web projects

--- a/sources/Applications/Web/BlazorClient/Properties/launchSettings.json
+++ b/sources/Applications/Web/BlazorClient/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       },
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
     },
-    "TheSharpFactory.App.BlazorClient": {
+    "Blazor-Client": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
