--- a/sources/Applications/Web/Angular/Properties/launchSettings.json
+++ b/sources/Applications/Web/Angular/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TheSharpFactory.App.Angular": {
+    "Angular": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
