--- a/sources/Applications/Web/BlazorServer/Properties/launchSettings.json
+++ b/sources/Applications/Web/BlazorServer/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TheSharpFactory.App.BlazorServer": {
+    "Blazor-Server": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
