--- a/sources/Applications/Web/MVCDirect/Properties/launchSettings.json
+++ b/sources/Applications/Web/MVCDirect/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
       }
     },
-    "TheSharpFactory.App.MVC": {
+    "MVC-Direct": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
