--- a/sources/Applications/Web/React/Properties/launchSettings.json
+++ b/sources/Applications/Web/React/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TheSharpFactory.App.React": {
+    "React": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
