Update service launchsettings

--- a/sources/Services/Unified/Properties/launchSettings.json
+++ b/sources/Services/Unified/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TheSharpFactory.Services.Unified": {
+    "Services-Unified": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
