Updated Shared ViewModel: 1. Set C# langversion to 7.3 2. Added a ViewModel for Web

--- a/sources/Applications/SharedViewModels/Apps.Shared.ViewModels.csproj
+++ b/sources/Applications/SharedViewModels/Apps.Shared.ViewModels.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.3</LangVersion>
     <AssemblyName>TheSharpFactory.Apps.Shared.ViewModels</AssemblyName>
-    <RootNamespace>TSF.Apps.Shared.ViewModels</RootNamespace>
+    <RootNamespace>TheSharpFactory.Apps.Shared.ViewModels</RootNamespace>
   </PropertyGroup>
 </Project>
