--- a/sources/Applications/Web/MVCDirect/Apps.Web.MVCDirect.csproj
+++ b/sources/Applications/Web/MVCDirect/Apps.Web.MVCDirect.csproj
@@ -2,13 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <LangVersion>8.0</LangVersion>
+    <RazorLangVersion>3.0</RazorLangVersion>
     <AssemblyName>TheSharpFactory.Apps.Web.MVCDirect</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Web.MVCDirect</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Apps.Web.SharedUI\Apps.Web.SharedUI.csproj" />
   </ItemGroup>
 
 </Project>
