Refactored projects and files: 1. Created abstractions (services and viewmodels) to fit into blazor and mvc 2. Fixed project references 3. Registered services and viewmodels into DI in Blazor Apps 4. Configured Counter page to hold app state in Blazor app 5. Configured FetchData page to fetch data by making an API call to the backend whenever navigation occurs to this page 6. Moved some files

--- a/sources/Applications/Shared/Abstractions/ViewModels/Apps.Shared.Abstractions.ViewModels.csproj
+++ b/sources/Applications/Shared/Abstractions/ViewModels/Apps.Shared.Abstractions.ViewModels.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>7.3</LangVersion>
-    <AssemblyName>TheSharpFactory.Apps.Shared.ViewModels</AssemblyName>
+    <LangVersion>8.0</LangVersion>
+    <AssemblyName>TheSharpFactory.Apps.Shared.ViewModels.Abstractions</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Shared.ViewModels</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Reactive\" />
   </ItemGroup>
+
 </Project>
