--- a/sources/Applications/Web/BlazorClient/Apps.Web.BlazorClient.csproj
+++ b/sources/Applications/Web/BlazorClient/Apps.Web.BlazorClient.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SharedUI\Apps.Web.SharedUI.csproj" />
+    <ProjectReference Include="..\SharedUI.Blazor\Apps.Web.SharedUI.Blazor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
