--- a/sources/Applications/Web/SharedUI/Apps.Web.SharedUI.csproj
+++ b/sources/Applications/Web/SharedUI/Apps.Web.SharedUI.csproj
@@ -12,10 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\SharedViewModels\Apps.Shared.ViewModels.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Content Update="Views\Home\Index.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
@@ -24,6 +20,10 @@
 
   <ItemGroup>
     <Folder Include="Areas\Landing\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\ViewModels\Apps.Shared.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
