--- a/sources/Applications/Cross-Platform/Hybrid/Desktop.ElectronWeb/Apps.Cross.Desktop.ElectronWeb.csproj
+++ b/sources/Applications/Cross-Platform/Hybrid/Desktop.ElectronWeb/Apps.Cross.Desktop.ElectronWeb.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Web\BlazorClient\Apps.Web.BlazorClient.csproj" />
+    <ProjectReference Include="..\..\..\Web\SharedUI.Blazor\Apps.Web.SharedUI.Blazor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
