--- a/sources/Applications/Cross-Platform/Hybrid/Desktop.WebWindow/Apps.Cross.Desktop.WebWindow.csproj
+++ b/sources/Applications/Cross-Platform/Hybrid/Desktop.WebWindow/Apps.Cross.Desktop.WebWindow.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Web\BlazorClient\Apps.Web.BlazorClient.csproj" />
+    <ProjectReference Include="..\..\..\Web\SharedUI.Blazor\Apps.Web.SharedUI.Blazor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
