--- a/sources/Applications/Web/BlazorServerDirect/Apps.Web.BlazorServerDirect.csproj
+++ b/sources/Applications/Web/BlazorServerDirect/Apps.Web.BlazorServerDirect.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorClient\Apps.Web.BlazorClient.csproj" />
+    <ProjectReference Include="..\SharedUI.Blazor\Apps.Web.SharedUI.Blazor.csproj" />
   </ItemGroup>
 
 </Project>
