--- a/sources/Applications/Web/MVC/Apps.Web.MVC.csproj
+++ b/sources/Applications/Web/MVC/Apps.Web.MVC.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>8.0</LangVersion>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
     <AssemblyName>TheSharpFactory.Apps.Web.MVC</AssemblyName>
     <RootNamespace>TheSharpFactory.Apps.Web.MVC</RootNamespace>
@@ -12,12 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Apps.Web.SharedUI\Apps.Web.SharedUI.csproj" />
+    <ProjectReference Include="..\..\Shared\ViewModels\Apps.Shared.ViewModels.csproj" />
     <ProjectReference Include="..\SharedUI\Apps.Web.SharedUI.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
