--- a/sources/Applications/Web/SharedUI/Apps.Web.SharedUI.csproj
+++ b/sources/Applications/Web/SharedUI/Apps.Web.SharedUI.csproj
@@ -12,18 +12,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Shared\Services\Apps.Shared.Services.csproj" />
     <ProjectReference Include="..\..\Shared\ViewModels\Apps.Shared.ViewModels.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Home\Index.cshtml">
+    <Content Update="Areas\Landing\Views\Home\Index.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Landing\" />
   </ItemGroup>
 
 </Project>
