Configured Azure Pipelines for Azgular project (AB#19)

--- a/sources/azure-pipelines-web-angular.yml
+++ b/sources/azure-pipelines-web-angular.yml
@@ -3,19 +3,33 @@
 # Add steps that publish symbols, save build artifacts, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
-trigger:
-- master
+pr:
+     branches:
+          include:
+               - master
+               - dev
+               - staging/*
+               - release/*
+          exclude:
+               - user_story/*
+               - feature/*
+               - epic/*
 
 pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: '**/*.sln'
+  solution: 'sources/TheSharpFactory.Web.Angular.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
 - task: NuGetToolInstaller@1
+
+- task: NodeTool@0
+  inputs:
+    versionSpec: '11.x' 
+    checkLatest: true # Optional
 
 - task: NuGetCommand@2
   inputs:
@@ -24,7 +38,7 @@ steps:
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
+    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=false /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
