--- a/sources/azure-pipelines.yml
+++ b/sources/azure-pipelines.yml
@@ -27,10 +27,17 @@ pr:
       - feature/*/*
       - epic/*/*
 
-variables:
-  solutionAngular: 'sources/TheSharpFactory.Web.Angular.sln'
-  solutionReact: 'sources/TheSharpFactory.Web.Angular.React.sln'
+variables:  
   projectServices: 'sources/Services/Unified/Services.Unified.csproj'
+  projectAppServiceAbstraction: 'sources/Applications/Shared/Abstractions/Services/App.Shared.Abstractions.Services.csproj'
+  projectViewModelAbstraction: 'sources/Applications/Shared/Abstractions/ViewModels/App.Shared.Abstractions.ViewModels.csproj'
+  projectAppService: 'sources/Applications/Shared/Services/App.Shared.Services.csproj'
+  projectViewModel: 'sources/Applications/Shared/ViewModels/App.Shared.ViewModels.csproj'
+  projectAngular: 'sources/Applications/Web/Angular/Apps.Web.Angular.csproj'
+  projectReact: 'sources/Applications/Web/React/Apps.Web.React.csproj'
+  projectSharedUIMVC: 'sources/Applications/Web/SharedUI/Apps.Web.SharedUI.csproj'
+  projectMVC: 'sources/Applications/Web/MVC/Apps.Web.MVC.csproj'
+  projectMVCDirect: 'sources/Applications/Web/MVCDirect/Apps.Web.MVCDirect.csproj'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
@@ -39,30 +46,112 @@ stages:
     displayName: 'Dev Build'
     jobs: 
     - job: BuildAPIServices
-      displayName: 'Build API Services'
+      displayName: 'API Services'
       pool:
         vmImage: 'ubuntu-16.04'
       steps:
         - task: UseDotNet@2
-          displayName: 'NuGet Tool Installer'
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
           inputs:
             version: '3.1.301'
             includePreviewVersions: false # Required for preview versions
         - task: DotNetCoreCLI@2
-          displayName: 'Build Services'
+          displayName: 'Build'
           inputs:
             command: 'build'
             projects: '$(projectServices)'
             arguments: '--configuration $(buildConfiguration)'
+    - job: BuildAppLayerSharedAppServiceAbstraction
+      displayName: 'Abstraction Layer: Shared App Service'
+      dependsOn: BuildAPIServices
+      condition: succeeded('BuildAPIServices')
+      pool:
+        vmImage: 'ubuntu-16.04'
+      steps:
+        - task: UseDotNet@2
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
+          inputs:
+            version: '3.1.301'
+            includePreviewVersions: false # Required for preview versions
+        - task: DotNetCoreCLI@2
+          displayName: 'Build'
+          inputs:
+            command: 'build'
+            projects: '$(projectAppServiceAbstraction)'
+            arguments: '--configuration $(buildConfiguration)'
+    - job: BuildAppLayerSharedViewModelAbstraction
+      displayName: 'Abstraction Layer: Shared ViewModels'
+      dependsOn: BuildAppLayerSharedAppServiceAbstraction
+      condition: succeeded('BuildAppLayerSharedAppServiceAbstraction')
+      pool:
+        vmImage: 'ubuntu-16.04'
+      steps:
+        - task: UseDotNet@2
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
+          inputs:
+            version: '3.1.301'
+            includePreviewVersions: false # Required for preview versions
+        - task: DotNetCoreCLI@2
+          displayName: 'Build'
+          inputs:
+            command: 'build'
+            projects: '$(projectViewModelAbstraction)'
+            arguments: '--configuration $(buildConfiguration)'
+    - job: BuildAppLayerSharedAppService
+      displayName: 'Shared App Services'
+      dependsOn:
+        - BuildAppLayerSharedAppServiceAbstraction
+        - BuildAppLayerSharedViewModelAbstraction
+      condition:
+        - succeeded('BuildAppLayerSharedAppServiceAbstraction')
+        - succeeded('BuildAppLayerSharedViewModelAbstraction')
+      pool:
+        vmImage: 'ubuntu-16.04'
+      steps:
+        - task: UseDotNet@2
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
+          inputs:
+            version: '3.1.301'
+            includePreviewVersions: false # Required for preview versions
+        - task: DotNetCoreCLI@2
+          displayName: 'Build'
+          inputs:
+            command: 'build'
+            projects: '$(projectAppService)'
+            arguments: '--configuration $(buildConfiguration)'
+    - job: BuildAppLayerSharedViewModel
+      displayName: 'Abstraction Layer: Shared Abstractions'
+      dependsOn:
+        - BuildAppLayerSharedAppServiceAbstraction
+        - BuildAppLayerSharedViewModelAbstraction
+        - BuildAppLayerSharedAppService
+      condition:
+        - succeeded('BuildAppLayerSharedAppServiceAbstraction')
+        - succeeded('BuildAppLayerSharedViewModelAbstraction')
+        - succeeded('BuildAppLayerSharedAppService')
+      pool:
+        vmImage: 'ubuntu-16.04'
+      steps:
+        - task: UseDotNet@2
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
+          inputs:
+            version: '3.1.301'
+            includePreviewVersions: false # Required for preview versions
+        - task: DotNetCoreCLI@2
+          displayName: 'Build'
+          inputs:
+            command: 'build'
+            projects: '$(projectViewModelAbstraction)'
+            arguments: '--configuration $(buildConfiguration)'
     - job: 'BuildAngularApp'
-      displayName: 'Build Angular SPA'
+      displayName: 'Angular SPA'
       dependsOn: BuildAPIServices
       condition: succeeded('BuildAPIServices')
       pool:
         vmImage: 'ubuntu-16.04'
       steps:
       - task: UseDotNet@2
-        displayName: 'DonetNet Core Tool Installer'
+        displayName: 'DonetNet Core 3.1.101 SDK Installer'
         inputs:
           version: '3.1.301'
           includePreviewVersions: false # Required for preview versions
@@ -72,10 +161,10 @@ stages:
           versionSpec: '11.x' 
           checkLatest: true 
       - task: DotNetCoreCLI@2
-        displayName: 'Build Angular Project'
+        displayName: 'Build'
         inputs:
           command: 'build'
-          projects: '$(projectServices)'
+          projects: '$(projectAngular)'
           arguments: '--configuration $(buildConfiguration)'
     - job: 'BuildReactApp'
       displayName: 'Build React SPA'
@@ -85,7 +174,40 @@ stages:
         vmImage: 'ubuntu-16.04'
       steps:
         - task: UseDotNet@2
-          displayName: 'NuGet Tool Installer'
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
+          inputs:
+            version: '3.1.301'
+            includePreviewVersions: false # Required for preview versions
+        - task: NodeTool@0
+          displayName: 'Node.js Installer'
+          inputs:
+            versionSpec: '11.x' 
+            checkLatest: true 
+        - task: DotNetCoreCLI@2
+          displayName: 'Build'
+          inputs:
+            command: 'build'
+            projects: '$(projectAngular)'
+            arguments: '--configuration $(buildConfiguration)'
+    - job: 'BuildMVCSharedUI'
+      displayName: 'Build Shared RCL for MVC'
+      dependsOn:
+        - BuildAPIServices
+        - BuildAppLayerSharedAppServiceAbstraction
+        - BuildAppLayerSharedViewModelAbstraction
+        - BuildAppLayerSharedAppService
+        - BuildAppLayerSharedViewModel
+      condition:
+        - succeeded('BuildAPIServices')
+        - succeeded('BuildAppLayerSharedAppServiceAbstraction')
+        - succeeded('BuildAppLayerSharedViewModelAbstraction')
+        - succeeded('BuildAppLayerSharedAppService')
+        - succeeded('BuildAppLayerSharedViewModel')
+      pool:
+        vmImage: 'ubuntu-16.04'
+      steps:
+        - task: UseDotNet@2
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
           inputs:
             version: '3.1.301'
             includePreviewVersions: false # Required for preview versions
@@ -98,5 +220,75 @@ stages:
           displayName: 'Build Angular Project'
           inputs:
             command: 'build'
-            projects: '$(projectServices)'
+            projects: '$(projectSharedUIMVC)'
+            arguments: '--configuration $(buildConfiguration)'
+    - job: 'BuildMVCApp'
+      displayName: 'Build MVC API'
+      dependsOn:
+        - BuildAPIServices
+        - BuildAppLayerSharedAppServiceAbstraction
+        - BuildAppLayerSharedViewModelAbstraction
+        - BuildAppLayerSharedAppService
+        - BuildAppLayerSharedViewModel
+        - BuildMVCSharedUI
+      condition:
+        - succeeded('BuildAPIServices')
+        - succeeded('BuildAppLayerSharedAppServiceAbstraction')
+        - succeeded('BuildAppLayerSharedViewModelAbstraction')
+        - succeeded('BuildAppLayerSharedAppService')
+        - succeeded('BuildAppLayerSharedViewModel')
+        - succeeded('BuildMVCSharedUI')
+      pool:
+        vmImage: 'ubuntu-16.04'
+      steps:
+        - task: UseDotNet@2
+          displayName: 'DotNetCore 3.1.301 SDK Installer'
+          inputs:
+            version: '3.1.301'
+            includePreviewVersions: false # Required for preview versions
+        - task: NodeTool@0
+          displayName: 'Node.js Installer'
+          inputs:
+            versionSpec: '11.x' 
+            checkLatest: true 
+        - task: DotNetCoreCLI@2
+          displayName: 'Build Angular Project'
+          inputs:
+            command: 'build'
+            projects: '$(projectMVC)'
+            arguments: '--configuration $(buildConfiguration)'
+    - job: 'BuildMVCAppDirect'
+      displayName: 'Build MVC Direct'
+      dependsOn:
+        - BuildAPIServices
+        - BuildAppLayerSharedAppServiceAbstraction
+        - BuildAppLayerSharedViewModelAbstraction
+        - BuildAppLayerSharedAppService
+        - BuildAppLayerSharedViewModel
+        - BuildMVCSharedUI
+      condition:
+        - succeeded('BuildAPIServices')
+        - succeeded('BuildAppLayerSharedAppServiceAbstraction')
+        - succeeded('BuildAppLayerSharedViewModelAbstraction')
+        - succeeded('BuildAppLayerSharedAppService')
+        - succeeded('BuildAppLayerSharedViewModel')
+        - succeeded('BuildMVCSharedUI')
+      pool:
+        vmImage: 'ubuntu-16.04'
+      steps:
+        - task: UseDotNet@2
+          displayName: 'DotNetCore 3.1.3.1 Installer'
+          inputs:
+            version: '3.1.301'
+            includePreviewVersions: false # Required for preview versions
+        - task: NodeTool@0
+          displayName: 'Node.js Installer'
+          inputs:
+            versionSpec: '11.x' 
+            checkLatest: true 
+        - task: DotNetCoreCLI@2
+          displayName: 'Build Angular Project'
+          inputs:
+            command: 'build'
+            projects: '$(projectMVCDirect)'
             arguments: '--configuration $(buildConfiguration)'
