--- a/sources/azure-pipelines.yml
+++ b/sources/azure-pipelines.yml
@@ -44,6 +44,7 @@ variables:
 stages:     
   - stage: 'nightly_builds'
     displayName: 'Dev Build'
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
     jobs: 
     - job: BuildAPIServices
       displayName: 'API Services'
@@ -99,12 +100,8 @@ stages:
             arguments: '--configuration $(buildConfiguration)'
     - job: BuildAppLayerSharedAppService
       displayName: 'Shared App Services'
-      dependsOn:
-        - BuildAppLayerSharedAppServiceAbstraction
-        - BuildAppLayerSharedViewModelAbstraction
-      condition:
-        - succeeded('BuildAppLayerSharedAppServiceAbstraction')
-        - succeeded('BuildAppLayerSharedViewModelAbstraction')
+      dependsOn: BuildAppLayerSharedAppServiceAbstraction
+      condition: and(succeeded(), eq(succeeded('BuildAppLayerSharedAppServiceAbstraction'), succeeded('BuildAppLayerSharedViewModelAbstraction')))
       pool:
         vmImage: 'ubuntu-16.04'
       steps:
