Added reference to the correct projects

--- a/sources/Domain/Extensions/Domain.Extensions.csproj
+++ b/sources/Domain/Extensions/Domain.Extensions.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain.Models\Domain.Models.csproj" />
+    <ProjectReference Include="..\Abstractions\Domain.Abstractions.csproj" />
+    <ProjectReference Include="..\Models\Domain.Models.csproj" />
   </ItemGroup>
 
 </Project>
