--- a/sources/Domain/Extensions/Domain.Extensions.csproj
+++ b/sources/Domain/Extensions/Domain.Extensions.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.3</LangVersion>
     <AssemblyName>TheSharpFactory.Domain.Extensions</AssemblyName>
     <RootNamespace>TheSharpFactory.Domain.Extensions</RootNamespace>
   </PropertyGroup>
