--- a/sources/Common/DTO/Common.DTO.csproj
+++ b/sources/Common/DTO/Common.DTO.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Domain\Models\Domain.Models.csproj" />
   </ItemGroup>
 
 </Project>
