--- a/sources/Domain/Models/Domain.Models.csproj
+++ b/sources/Domain/Models/Domain.Models.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Data\Repository\Data.Repository.csproj" />
     <ProjectReference Include="..\Abstractions\Domain.Abstractions.csproj" />
   </ItemGroup>
